--- a/springboottest/pom.xml
+++ b/springboottest/pom.xml
@@ -18,7 +18,14 @@
         <java.version>1.8</java.version>
     </properties>
 
+
     <dependencies>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
